tests/baselines/reference/jsxAndTypeAssertion.errors.txt
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(8,20): error TS2304: Cannot find name 'any'.
tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx(10,11): error TS2304: Cannot find name 'any'.


==== tests/cases/conformance/jsx/jsxAndTypeAssertion.tsx (2 errors) ====
    /// <JSX factory="createElement" />
    
    declare var createElement: any;
    
    class foo {}
    
    var x: any;
    x = <any> { test: <any></any> };
                       ~~~
!!! error TS2304: Cannot find name 'any'.
    
    x = <any><any></any>;
              ~~~
!!! error TS2304: Cannot find name 'any'.
     
    x = <foo>hello {<foo>{}} </foo>;
    
    x = <foo test={<foo>{}}>hello</foo>;
    
    x = <foo test={<foo>{}}>hello{<foo>{}}</foo>;
    
    x = <foo>x</foo>, x = <foo/>;
    
    <foo>{<foo><foo>{/foo/.test(x) ? <foo><foo></foo> : <foo><foo></foo>}</foo>}</foo>
    
        
    